force-app/main/default/objects/ORIG_Rounds_Program__c/ORIG_Rounds_Program__c.object-meta.xml
<CustomObject>
    <label>ORIG Rounds Program</label>
    <nameField>
        <label>Rounds Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ORIG Rounds Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>