force-app/main/default/objects/ORIG_Rounds_Program__c/fields/First_UBSR_Session__c.field-meta.xml
<CustomField>
    <fullName>First_UBSR_Session__c</fullName>
    <label>First UBSR Session</label>
    <type>Date</type>
</CustomField>