force-app/main/default/objects/ORIG_Rounds_Program__c/fields/Last_Rounds_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Rounds_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recent Rounds session for which we have received an evaluation. Data is auto-populated from the Rounds session object. If blank, see the Last Evaluation field.</description>
    <inlineHelpText>The most recent Rounds session for which we have received an evaluation. Data is auto-populated from the Rounds session object. If blank, see the Last Evaluation field.</inlineHelpText>
    <label>RP Last Rounds Session</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TEST_Rounds_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>