force-app/main/default/objects/ORIG_Rounds_Program__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Membership Agreement</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipName>TEST_Rounds_Programs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>