force-app/main/default/objects/ORIG_Rounds_Program__c/fields/Multiple_Locations_UTR__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Locations_UTR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not a Rotating or MultiSite member, but conducts Rounds at more than one location.(UTR = under the radar).</description>
    <inlineHelpText>Not a Rotating or MultiSite member, but conducts Rounds at more than one location.(UTR = under the radar).</inlineHelpText>
    <label>Multiple Locations (UTR)</label>
    <type>Checkbox</type>
</CustomField>