force-app/main/default/objects/ORIG_Rounds_Program__c/fields/Multisite_UTR_Note__c.field-meta.xml
<CustomField>
    <fullName>Multisite_UTR_Note__c</fullName>
    <label>Multisite (UTR) Note</label>
    <type>TextArea</type>
</CustomField>