force-app/main/default/objects/ORIG_Rounds_Program__c/fields/RP_Alias_Rounds__c.field-meta.xml
<CustomField>
    <fullName>RP_Alias_Rounds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RP Alias Rounds</label>
    <type>Checkbox</type>
</CustomField>