force-app/main/default/objects/ORIG_Rounds_Program__c/fields/RP_First_Rounds_Session__c.field-meta.xml
<CustomField>
    <fullName>RP_First_Rounds_Session__c</fullName>
    <label>RP First Rounds Session</label>
    <type>Date</type>
</CustomField>