force-app/main/default/objects/ORIG_Rounds_Program__c/fields/RP_Last_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>RP_Last_Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legacy data; static field that will be deleted once all Rounds data has been moved. &quot;Last Rounds Session&quot; is more accurate unless it is blank.</description>
    <inlineHelpText>Legacy data; static field that will be deleted once all Rounds data has been moved. &quot;Last Rounds Session&quot; is more accurate unless it is blank.</inlineHelpText>
    <label>RP Last Eval</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TEST_Rounds_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>