force-app/main/default/objects/ORIG_Rounds_Program__c/fields/RP_Number__c.field-meta.xml
<CustomField>
    <fullName>RP_Number__c</fullName>
    <displayFormat>RP{0000}</displayFormat>
    <label>RP#</label>
    <type>AutoNumber</type>
</CustomField>