force-app/main/default/objects/ORIG_Rounds_Program__c/fields/UBSR_Pilot__c.field-meta.xml
<CustomField>
    <fullName>UBSR_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this member participated in the 2018 UBSR pilot program.</description>
    <inlineHelpText>If checked, this member participated in the 2018 UBSR pilot program.</inlineHelpText>
    <label>UBSR Pilot</label>
    <type>Checkbox</type>
</CustomField>