force-app/main/default/objects/ORIG_Rounds_Program__c/fields/Unit_1__c.field-meta.xml
<CustomField>
    <fullName>Unit_1__c</fullName>
    <description>Departments, wards, units, etc. conducting UBSR.</description>
    <label>Unit 1</label>
    <type>TextArea</type>
</CustomField>