force-app/main/default/objects/ORIG_Rounds_Program__c/fields/Unit_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_2__c</fullName>
    <label>Unit 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>